--- a/README
+++ b/README
@@ -9,6 +9,6 @@ It is designed to be simple and as fast as possible. It features:
 * fullscreen output
 * support for playing flash videos
 
-ffbrowser is based on QtWebKit 2.0 which gives is excellent
+ffbrowser is based on QtWebKit 2.0 which gives it excellent
 standard-compliance and fairly good performance. It's slightly optimized
 for small devices by turning some eye-catchy features off.
